// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic update on table 1`] = `
"
  update public.users set (young) = 
  (
    select * from 
    json_populate_record(
      null::public.users, '{\\"young\\":true}'
    )
  )
   where age < 30;"
`;

exports[`update should ignore order 1`] = `
"
  update public.users set (young) = 
  (
    select * from 
    json_populate_record(
      null::public.users, '{\\"young\\":true}'
    )
  )
   where age < 30;"
`;

exports[`update with json column 1`] = `
"
  update public.users set (profile,numbers) = 
  (
    select * from 
    json_populate_record(
      null::public.users, '{\\"profile\\":{\\"firstName\\":\\"aaaa\\",\\"lastName\\":\\"bbb\\"},\\"numbers\\":[1,2,43,5.5,6]}'
    )
  )
   where name = 'hello world';"
`;

exports[`update with returning record on table 1`] = `
"
  update public.users set (young) = 
  (
    select * from 
    json_populate_record(
      null::public.users, '{\\"young\\":true}'
    )
  )
   where name = 'hello world' returning *;"
`;
